--- a/src/index.html
+++ b/src/index.html
@@ -107,6 +107,65 @@
 
             </div>
         </div>
+        <div class="holder">
+            <!-- <img style=" height: 100%;width:100%;display: block; margin:0 auto;object-fit:fill;"
+            src="https://s3.envato.com/files/102898187/full.png" alt="player"> -->
+        </div>
+    </section>
+    <!-- ABOUT -->
+    <!-- <section class="audioplayer" style="max-height: 650px;">
+        <div class="container">
+            <div class="holder" style="background: rgb(13 13 13);">
+                <img style="height: 100%;width:47%;display: block; margin:0 auto;object-fit:contain;"
+                    src="https://s3.envato.com/files/102898187/full.png" alt="player">
+            </div>
+        </div>
+    </section> -->
+    <!-- AUDIOPLAYER -->
+    <section class="mybio">
+        <div class="container">
+            <div class="mybio-wrapper">
+                <h1 class="mybio-wrapper__title">About me more long</h1>
+                <div class="mybio-wrapper__descr">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor
+                    incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                    commodo
+                    consequat. Duis
+                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur
+                    sint
+                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                    <br><br>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                    commodo consequat. Duis
+                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint
+                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborumLorem
+                    ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor
+                    incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                    commodo
+                    consequat. Duis
+                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur
+                    sint
+                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                    <br><br>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                    commodo consequat. Duis
+                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint
+                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
